--- a/Formeln TGI.tex
+++ b/Formeln TGI.tex
@@ -23,13 +23,25 @@ Leistung: $P =U*I = \frac{U^2}{R} = I^2*R $ \\
 \underline{\textbf{Kondensator:}}\\
 Kapazität: $C = \frac{Q}{U}, [C]=1F$\\
 Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
+% TODO Eher Felder?
 Stromdichte: $S=\frac{I}{A}$\\
 Feldstärke: $E=\frac{S}{\kappa}$\\
 Spannungsabfall: $U=E*l$\\
 Potenzial: $\varphi = \int_x^0 E(s)ds + \varphi(0)$\\
-%TODO 2.4
+Stromstärke: $I = \oint H ds = H * 2\pi r$\\
+Magnetische Feldstärke: $H = \frac{I}{2\pi d}, [H] = 1\frac{A}{m}$\\
+Kraft pro Leitungslänge: $F=Q*v*B, [F] = 1N$\\
+Ladung pro Millimeter: $Q = \rho * V, [Q] = 1C$\\
+$e^-$-Geschwindigkeit: $v = \frac{S}{\rho}, [v] = 1\frac{m}{s}$\\
+Flussdichte: $B=\mu*H, [B] = 1 \frac{Vs}{m^2}$\\
+
+% v = S/\roh
 $\tau = R*C$\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
+
+\end{minipage}%
+~~~~~~~
+\begin{minipage}{0.3\textwidth}
 \underline{\textbf{Leitungen:}}\\
 $k_0 = \frac{R_w}{R_w + R_i} $\\
 $r_a = \frac{R_a - R_w}{R_a + R_w} $\\
@@ -40,13 +52,16 @@ Auskoppeln Gatter:\\
 \phantom{ss} $U_1(t) = k_a * U_1(x,t)$\\
 $\Delta t = l/c$\\
 %Aufladen über WS: $
-\end{minipage}%
-~~~~~~~
-\begin{minipage}{0.3\textwidth}
+
 \underline{\textbf{Koaxialkabel}}:\\
 $R_W = \sqrt{\frac{L'}{C'}}$\\
     \phantom{sssi} $=\frac{\sqrt{\epsilon_R * \mu_R}}{c_0 * C'}$\\
     \phantom{sssi} $=\frac{\sqrt{\mu_R} * ln(\frac{d_a}{d_i})}{2c_0 * \pi * \epsilon_0 *\sqrt{\epsilon_R}}$\\
+
+
+\end{minipage}%
+~~~~~~
+\begin{minipage}{0.3\textwidth}
 \underline{\textbf{Operationsverstärker}}:\\
 \includegraphics[scale=0.40]{IOV.png}
 \includegraphics[scale=0.40]{NIOV.png}
@@ -54,11 +69,6 @@ $U_D = 0$
 \includegraphics[scale=0.40]{ISTOV.png}
 \includegraphics[scale=0.40]{NISTOV.png}
 % TODO U_D = ?
-
-\end{minipage}%
-~~~~~~
-\begin{minipage}{0.3\textwidth}
-3. Spalte
 \end{minipage}%
 
 \end{landscape}
