Landscape gone, Update Equations
Closes #1.

--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -6,7 +6,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \begin{document}
-\begin{landscape}
+%\begin{landscape}
 
 \begin{minipage}{0.45\textwidth}
 \underline{\textbf{Grundformeln}}\\
@@ -22,10 +22,13 @@ Strom-Teiler: $\frac{I_1}{I_2} = \frac{R_2}{R_1}$\\
 Leistung: $P =U \cdot I = \frac{U^2}{R} = I^2 \cdot R $ \\
 \phantom{ssssssssss} $[P] = 1V \cdot A =1 W$\\
 \underline{\textbf{Kondensator:}}\\
-Kapazität: $C = \frac{Q}{U} = \frac{\varepsilon \cdot h \cdot b}{d},$\\
+Kapazität: $C = \frac{Q}{U} = \frac{\varepsilon \cdot A }{d},$\\
 \phantom{ssssssssssii} $[C]=1F$\\
+\phantom{sssssssssssii} $d =$ Plattenabstand\\
+Kond. parallel: $C_{ges} = C_1 + C_2$\\
+Kond. in Reihe: $C_{ges} = C_1 || C_2$\\
 Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
-% TODO Eher Felder?
+\underline{\textbf{Felder}}\\
 Stromdichte: $S=\frac{I}{A}$\\
 Feldstärke: $E=\frac{S}{\kappa}$\\
 Spannungsabfall: $U=E \cdot l$\\
@@ -91,5 +94,5 @@ $U_D = 0$
 % TODO U_D = ?
 \end{minipage}%
 
-\end{landscape}
+%\end{landscape}
 \end{document}
