Add (x) to potencial

--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -32,7 +32,7 @@ Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
 Stromdichte: $S=\frac{I}{A}$\\
 Feldstärke: $E=\frac{S}{\kappa}$\\
 Spannungsabfall: $U=E \cdot l$\\
-Potenzial: $\varphi = \int_x^0 E(s)ds + \varphi(0)$\\
+    Potenzial: $\varphi (x)= \int_x^0 E(s)ds + \varphi(0)$\\
 Stromstärke: $I = \oint H ds = H \cdot 2\pi r$\\
 Magnetische Feldstärke: $H = \frac{I}{2\pi d}, [H] = 1\frac{A}{m}$\\
 Kraft pro Leitungslänge: $F=Q \cdot v \cdot B, [F] = 1N$\\
