--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -25,10 +25,23 @@ Leistung: $P =U \cdot I = \frac{U^2}{R} = I^2 \cdot R $ \\
 Kapazität: $C = \frac{Q}{U} = \frac{\varepsilon \cdot A }{d},$\\
 \phantom{ssssssssssii} $[C]=1F$\\
 \phantom{sssssssssssii} $d =$ Plattenabstand\\
+Ladung: $q = \int_{t_0}^t i(\tau) d\tau + q_0$\\
+\phantom{sssssssis} $\stackrel{homogen}{=} I \cdot t$\\
+\phantom{ssssssssssii} $[q]=1C$\\
+Spannung: $U = \frac{Q}{C}$\\
+\phantom{ssi} $= \frac{1}{C} \cdot (\int_{t_0}^t i(\tau) d\tau + q_0)$\\
 Kond. parallel: $C_{ges} = C_1 + C_2$\\
 Kond. in Reihe: $C_{ges} = C_1 || C_2$\\
 Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
-\underline{\textbf{Felder}}\\
+\\
+$\tau = R \cdot C$\\
+Zeit Auf-/Entlanden: $t = 3\tau$\\
+Arbeit: $W = \int_0^\infty P dt$\\
+\phantom{sssssssss} $= \frac{U_b^2}{R} \cdot \int_0^\infty e^{-\frac{2t}{\tau}}$
+$W_{Zyklus} = W_a + W_e$\\
+% TODO Wann ist aufladen mit U(1-e) und wann k1 + k2*e?
+
+\underline{\textbf{Felder: }}\\
 Stromdichte: $S=\frac{I}{A}$\\
 Feldstärke: $E=\frac{S}{\kappa}$\\
 Spannungsabfall: $U=E \cdot l$\\
@@ -41,8 +54,7 @@ $e^-$-Geschwindigkeit: $v = \frac{S}{\rho}, [v] = 1\frac{m}{s}$\\
 Flussdichte: $B=\mu \cdot H, [B] = 1 \frac{Vs}{m^2}$\\
 
 
-$\tau = R \cdot C$\\
-Zeit Auf-/Entlanden: $t = 3\tau$\\
+
 
 \end{minipage}%
 ~~~~~~~
