--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -37,7 +37,7 @@ Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
 $\tau = R \cdot C$\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
 Arbeit(=Energie): $W = \int_0^\infty P dt$\\
-\phantom{sssssssss} $= \frac{U_b^2}{R} \cdot \int_0^\infty e^{-\frac{2t}{\tau}}$
+\phantom{sssssssss} $= \frac{U_b^2 \cdot C}{2} $
 $W_{Zyklus} = W_a + W_e$\\
 % TODO Wann ist aufladen mit U(1-e) und wann k1 + k2*e?
 
