--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -111,11 +111,19 @@ Tiefpass: Oben R, Mitte C
 \underline{\textbf{Operationsverstärker:}}\\
 \includegraphics[scale=0.40]{IOV.png}
 \includegraphics[scale=0.40]{NIOV.png}
-$U_D = 0$
+$U_D = 0 \Rightarrow I_N = 0, U_N = 0$
 \includegraphics[scale=0.40]{ISTOV.png}
 \includegraphics[scale=0.40]{NISTOV.png}
+$U_A \in \{U_B,0\}$
+$U_D = 0 = U_P - U_{E_{HL}}$\\
+\phantom{sssi}$U_{E_{HL}} = \frac{\Rightarrow U_{A_{max}} \cdot R_2}{R_1 + R_2}$\\
+$U_D = 0 = U_P - U_{E_{LH}}$\\
+\phantom{sssi}$U_{E_{LH}}= \frac{\Rightarrow U_{A_{min}} \cdot R_2}{R_1 + R_2}$\\
+Schalthysterese: $H = |U_{E_{HL}} - U_{E_{LH}}| $\\
+Diode: $\Rightarrow U_{E_{LH}} = 0$
+
 \includegraphics[scale=0.40]{Zehnerpotenzen.jpg}
-% TODO U_D = ?
+
 \end{minipage}%
 
 \newpage
@@ -151,7 +159,7 @@ p-Kanal:\\
 \phantom{ss} Leitet: $\Rightarrow U_{DS} \leq 0$\\
 \phantom{sssssisisssi}$\Rightarrow I_D \leq 0$\\
 
-Source-Drain bestimmen: Potenziale berechnen
+Source-Drain bestimmen: Potenziale berechnen\\
 %I_D =
 \end{minipage}%
 
