--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -161,6 +161,13 @@ p-Kanal:\\
 
 Source-Drain bestimmen: Potenziale berechnen\\
 %I_D =
+NMOS: Schaltung aus n-Kanal Transistoren\\
+\phantom{ss} Logische Schaltung hat nur nicht-negierte Literale und eine Negation über kompletter Formel\\
+PMOS: Schaltung aus p-Kanal Transistoren hat nur negierte Literalel\\
+CMOS: Besteht aus NMOS und PMOS Teil, welche Komplementär sind\\
+Oder in Formel => Parallel in Schaltung
+Und in Formel => Reihe in Schaltung
+\phantom{ss} Wenn NMOS Parallel, dann PMOS Reihe\\
 \end{minipage}%
 
 %\end{landscape}
