--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -39,7 +39,7 @@ Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
 $\tau = R \cdot C$\\
 Wenn WS in Reihe, trotzdem in der Rechnung für $\tau$ wie parallel\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
-$t_1 = \frac{1}{2} \cdot \frac{1}{T} = \frac{1}{2} * f$
+$t_1 = \frac{1}{2} \cdot \frac{1}{T} = \frac{1}{2} \cdot f$
 Arbeit(=Energie): $W = \int_0^\infty P dt$\\
 \phantom{sssssssss} $= \frac{U_b^2 \cdot C}{2} $\\
 \phantom{sssssssss} $= [W] = 1J $\\
@@ -86,11 +86,14 @@ $R_W = \sqrt{\frac{L'}{C'}}$\\
     \phantom{sssi} $=\frac{\sqrt{\epsilon_R \cdot \mu_R}}{c_0 \cdot C'}$\\
     \phantom{sssi} $=\frac{\sqrt{\mu_R} \cdot ln(\frac{d_a}{d_i})}{2c_0 \cdot \pi \cdot \epsilon_0 \cdot \sqrt{\epsilon_R}}$\\
 % Gleichung C', L'
+$C = \frac{1}{\sqrt{L' \cdot C'}} = \frac{c_0}{\sqrt{\epsilon_r \cdot \mu_s}}$\\
+$X' = \frac{X}{l}$\\
 
 
-$k_0 = \frac{R_w}{R_w + R_i} $\\
+Einkopplung: $k_0 = \frac{R_w}{R_w + R_i} $\\
 $r_a = \frac{R_a - R_w}{R_a + R_w} $\\
 $k_a = 1 + r_a$\\
+Reflexion: $U_r(l,t) = r_a \cdot U_k(l,t)$\\
 Anfang: $U_k(0,t)=k_0 \cdot U_{q1}(t)$\\
 Ende: $U_k(x,t)= k_0 \cdot U_{q1}(t-\Delta t)$\\
 $\Delta t = \frac{l}{c}$\\
@@ -168,6 +171,28 @@ CMOS: Besteht aus NMOS und PMOS Teil, welche Komplementär sind\\
 Oder in Formel => Parallel in Schaltung
 Und in Formel => Reihe in Schaltung
 \phantom{ss} Wenn NMOS Parallel, dann PMOS Reihe\\
+\end{minipage}%
+
+\begin{minipage}{0.3\textwidth}
+\underline{\textbf{Multiplexer:}}\\
+OBDD: Nutze Shannon
+\phantom{ss} $\Rightarrow$ Mache aus geg. Formel neue Formeln, wo für 1. Variable 0 oder 1 angenommen wird. $\rightarrow$ Mache aus diesen Formeln neue Formeln, bei denen 2. Variable 0 oder 1 angenommen wird.\\
+\phantom{ss} $\Rightarrow$ Jede Ebene von Funktionen ist 1 Ebene im Baum ist eine Ebene von Multiplexern. In x.ter Ebene ist x. Variable Schaltvariable an Mutliplexer\\
+KV-Diagramme: Grey-Code, !Rechtecke! müssen 2-er Potenzen als Seitenlänge haben.
+\underline{\textbf{Flip-Flop:}}\\
+Zeitstuerung: ((1)|(2)-takt-(zustands)|(flanken))|(Nicht takt) - gesteurtes FF
+Datenstuerung: Delay, Toggle (1 Eingang), R-S, J-K (2 Eingänge) FF
+Falls $>$ an Takt, dann steigende Taktflankengestuert\\
+Falls $o>$, dann fallende Taktflankengestuert\\
+% Typen von Tabellen (Zustandsübergangstabelle,...)
+\underline{\textbf{Arten von Automaten:}}\\
+Moore: Eingang hängt nicht direkt am Ausgang\\
+Falls nicht Moore, dann Mealy\\
+Synchron: Er hat Takt\\
+Asynchron: Er hat keinen Takt\\
+Autonom: Kein eigener Eingang\\
+% Speicher nicht Übung, aber dennoch in Klausur
+
 \end{minipage}%
 
 %\end{landscape}
