Add formular to OV

--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -103,6 +103,7 @@ $U_D = 0 \Rightarrow I_N = 0, U_N = 0$\\
 
 \includegraphics[scale=0.40]{NISTOV.png}\\
 \includegraphics[scale=0.40]{ISTOV.png}\\
+Umschalten, wenn $U_D = 0$\\
 $U_A \in \{U_B,0\}$\\
 $U_D = 0 = U_P - U_{E_{HL}}$\\
 \phantom{sssi}$\Rightarrow U_{E_{HL}} = \frac{U_{A_{max}} \cdot R_2}{R_1 + R_2}$\\
