--- a/FormelnTGI.tex
+++ b/FormelnTGI.tex
@@ -36,20 +36,27 @@ Spannung: $U = \frac{Q}{C}$\\
 Kond. parallel: $C_{ges} = C_1 + C_2$\\
 Kond. in Reihe: $C_{ges} = C_1 || C_2$\\
 Kond. in Reihe: $Q_1 = Q_2 = Q_{12}$\\
-"eingeschwungen" $\Rightarrow i = 0$\\
-$\tau = R \cdot C$\\
+
+$U_a(t) = k_1 + k_2 \cdot e^{-\frac{t-t_0}{\tau}}$\\
+Berechne $k_1$ durch $t \rightarrow \infty$, oft $U_B$\\
+$k_2$ durch $t = 0$, oft $-U_B$\\
+$[k] = 1V$\\
+
+$\tau = R \cdot C; [\tau] = 1s$\\
 \phantom{ss}falls WS in Reihe $\Rightarrow$ parallel\\
+$t =\frac{T}{2} = \frac{1}{2f}$\\
 Zeit Auf-/Entlanden: $t = 3\tau$\\
-$t =\frac{1}{2T} = \frac{f}{2}$\\
+
+"eingeschwungen" $\Rightarrow i_C = 0$\\
+
 Arbeit(=Energie): $W = \int_0^\infty P dt$\\
 \phantom{sssssssss} $= \frac{U_b^2 \cdot C}{2} $\\
 \phantom{sssssssss} $= [W] = 1J $\\
 $W_{Zyklus} = W_a + W_e$\\
-$U_a(t) = k_1 + k_2 \cdot e^{\frac{t-t_0}{\tau}}$\\
-Berechne $k_1$ durch $t \rightarrow \infty$,\\
-$k_2$ durch $t = 0$\\
 
-Tiefpass: Oben R, Mitte C
+$\overline{P} = \frac{W_{Zyklus}}{T}$\\
+
+Tiefpass: Oben R, Mitte C, Integrator
 \end{minipage}%
 ~~~~~~~
 \begin{minipage}{0.33\textwidth}
@@ -65,7 +72,7 @@ Mag.Feldstr.: $H = \frac{I}{2\pi d}, [H] = 1\frac{A}{m}$\\
 Kraft pro Leitungslänge:\\
 \phantom{ss} $F=Q \cdot v \cdot B, [F] = 1N$\\
 Ladung pro mm: $Q = \rho \cdot V$\\
-$e^-$-Gesch.: $v = \frac{S}{\rho}, [v] = 1\frac{m}{s}$\\
+$e^-$, Drift-Gesch.: $v = \frac{S}{\rho}, [v] = 1\frac{m}{s}$\\
 Flussdichte: $B=\mu \cdot H, [B] = 1 \frac{Vs}{m^2}$\\
  
  \underline{\textbf{(Koaxial-)Leitungen}}:\\
@@ -74,17 +81,23 @@ $R_W = \sqrt{\frac{L'}{C'}}$\\
     \phantom{sssi} $=\frac{\sqrt{\mu_R} \cdot ln(\frac{d_a}{d_i})}{2c_0 \cdot \pi \cdot \epsilon_0 \cdot \sqrt{\epsilon_R}}$\\
 % Gleichung C', L'
 $C = \frac{1}{\sqrt{L' \cdot C'}} = \frac{c_0}{\sqrt{\epsilon_r \cdot \mu_s}}$\\
+$C' = \frac{2\pi \epsilon_0 \epsilon_r \cdot s}{ln(\frac{d_a}{d_i})}$\\
+$L' = \frac{\sqrt{\epsilon_r \mu_r}}{c_0 \cdot \sqrt{C'}}$\\
 $X' = \frac{X}{l}$\\
 
 $k_0 = \frac{R_w}{R_w + R_i} $\\
 $r_a = \frac{R_a - R_w}{R_a + R_w} $\\
-$k_a = 1 + r_a$\\
+$k_a = 1 + r_a = k_1$\\
+$R_w ==$ WS der Leitung\\
+$R_i ==$ WS vor der Leitung\\
+$R_a ==$ WS nach der Leitung\\
 Reflexion: $U_r(l,t) = r_a \cdot U_k(l,t)$\\
-Anfang: $U_k(0,t)=k_0 \cdot U_{q1}(t)$\\
-Ende: $U_k(x,t)= k_0 \cdot U_{q1}(t-\Delta t)$\\
-$\Delta t = \frac{l}{c}$\\
+Anfang: $U_k(0,t)=k_0 \cdot U_{q}(t)$\\
+Ende: $U_k(x,t)= k_0 \cdot U_{q}(t-\Delta t)$\\
+$\Delta t = \frac{l}{c} = \frac{l}{\lambda f}$\\
 Auskoppeln Gatter:\\
 \phantom{ss} $U_1(t) = k_a \cdot U_1(x,t)$\\
+V Ende Leitung: $u_a = k_0 \cdot k_a \cdot u_q$\\
 
 LW-Leitung: $\alpha = \frac{L_P}{l}; [\alpha] = 1 \frac{dB}{m}$\\
 Lichtleistung: $L_P = 10 \cdot lg\frac{P_e}{P_a} dB$\\
